tests/syntactic/inputdecl/inputdecl.err
Error: Redefinition of input directives for relation A in file inputdecl.dl at line 3
.input A(IO=stdout)
^-------------------
Previous definition in file inputdecl.dl at line 2
.input A(IO=stdout)
^-------------------
1 errors generated, evaluation aborted
