tests/syntactic/inputdecl/inputdecl.dl
.decl A(x:number)
.input A(IO=stdout)
.input A(IO=stdout)
